2014-10-15  Michele Salvadore <michele.salvadore@gmail.com>

	* src/bonds.cpp: Updated FixedRateBond() to better match the function
	signature in the QuantLib library while making it more flexible
	* src/utils.cpp:
	* bond.R: Ditto

	* man/Bond.Rd: Updated accordingly
	* man/FixedRateBond.Rd: Ditto

	* tests/RQuantLib.R: Corresponding test update
	* tests/RQuantLib.Rout.save: Ditto

2014-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Added minor version, shorter Description

2014-10-13  Michele Salvadore <michele.salvadore@gmail.com>

	* src/bonds.cpp: Fixed-income functionality cleanup
	* src/utils.cpp: Ditto
	* R/bonds.R: Ditto

	* man/Bond.Rd: Corresponding documentation update
	* man/BondUtilities.Rd: Ditto
	* man/CallableBond.Rd: Ditto
	* man/ConvertibleBond.Rd: Ditto
	* man/Enum.Rd: Ditto
	* man/FixedRateBond.Rd: Ditto
	* man/FloatingRateBond.Rd: Ditto
	* man/ZeroCouponBond.Rd: Ditto

	* tests/RQuantLib.R: Corresponding test update
	* tests/RQuantLib.Rout.save: Ditto

2014-06-16  Dirk Eddelbuettel  <edd@debian.org>

	* inst/QuantLib_LICENSE.TXT: Renamed from QuantLib-License.txt per
	CRAN request
	* inst/Boost_LICENSE.TXT: Renamed from Boost-License.txt for symmetry

2014-05-28  Dirk Eddelbuettel  <edd@debian.org>

	* R/asian.R: Set default values for first, length and fixing used for
	arithemtic asian options
	* man/asian.Rd: Update documentation

	* src/asian.cpp: For arithmetic option, check parameters first,
	length and fixings

	* src/asian.cpp (asianOptionEngine): Use NA not NaN on missing greeks
	* src/barrier_binary.cpp (barrierOptionEngine): Idem

	* tests/RQuantlib.Rout.save: Updated accordingly

2014-05-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp: Converted three more functions interfaces
	* src/bonds.cpp: Idem
	* inst/include/rquantlib_internal.h: Idem

2014-05-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp: Change getIborIndex and getFlatCurve to use List
	* src/bonds.cpp: Idem